[ui] fix - line break in <MatchHeader>

--- a/ui/src/css/mytheme.css
+++ b/ui/src/css/mytheme.css
@@ -30,7 +30,7 @@ td.middle {
   vertical-align: middle;
 }
 
-.pseudohead{font-size:16px; font-weight: bold;}
+.pseudohead{font-size:14px; font-weight: bold;}
 
 .result{
   color : #000034;
